@@ -30,7 +30,6 @@
                 <onright>60</onright>
                 <ondown>50</ondown>
                 <onup>50</onup>
-                <onback>9000</onback>
                 <scrolltime tween="cubic" easing="out">600</scrolltime>
                 <onback>9000</onback>
                 <pagecontrol>60</pagecontrol>
